<resources>
    <string name="baidu_hint" />
    <string name="def_cell_broadcast_sim1_chn1_name" />
    <string name="def_cell_broadcast_sim1_chn2_name" />
    <string name="def_cell_broadcast_sim2_chn1_name" />
    <string name="def_cell_broadcast_sim2_chn2_name" />
    <string name="def_sim1_phone_voice_mail_number">0</string>
    <string name="def_sim2_phone_voice_mail_number">0</string>
    <string name="phoneAppLabel">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="fdn_contact_invalid">Invalid contact name or number.</string>
    <string name="fdn_contact_name_number_invalid">Name and number can not be empty at the same time.</string>
    <string name="fdn_contact_number_invalid">Invalid contact number.</string>
    <string name="fdn_phone_book_busy">Phone book is busy now,please try later.</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_simError_slotNumber">No SIM or SIM error in slot %d</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">Barred call</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_cdma_lockedUntilPowerCycle">CDMA: Phone locked until power cycle.</string>
    <string name="callFailed_cdma_drop">CDMA: Call dropped.</string>
    <string name="callFailed_cdma_intercept">CDMA: Call intercepted.</string>
    <string name="callFailed_cdma_reorder">CDMA: reorder.</string>
    <string name="callFailed_cdma_SO_reject">CDMA: Service Option Reject.</string>
    <string name="callFailed_cdma_retryOrder">CDMA: retry order.</string>
    <string name="callFailed_cdma_accessFailure">CDMA: Access unsuccessful.</string>
    <string name="callFailed_cdma_preempted">CDMA: Preempted.</string>
    <string name="callFailed_cdma_notEmergency">Only Emergency calls are possible.</string>
    <string name="callFailed_unobtainable_number">Invalid Number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call Lost</string>
    <string name="ok">OK</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running…</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">"Send the following tones?
"</string>
    <string name="pause_prompt_str">"Sending Tones
"</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace the wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="dialer_emptyListWorking">Loading…</string>
    <string name="enterPin">Type PIN code to unlock SIM card.</string>
    <string name="pinUnlocked">SIM unlocked</string>
    <string name="enterNewPin">New SIM PIN code</string>
    <string name="verifyNewPin">Type new SIM PIN code again to confirm</string>
    <string name="verifyFailed">The SIM PINs you typed do not match. Please try again.</string>
    <string name="enterPuk">Type PUK code to unlock SIM card</string>
    <string name="badPuk">Incorrect PUK code!</string>
    <string name="buttonTxtContinue">Continue</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="call_additional_sum">Others</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelCW">Call waiting</string>
    <string name="call_forwarding_settings">Voice call forwarding settings</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="labelCFB">Forward when busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="labelCFNRy">Forward when unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="labelCFNRc">Forward when unreachable</string>
    <string name="messageCFNRc">Number when unreachable</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="preferred_network_mode_summary">Change the network operating mode</string>
    <string name="throttle_data_usage">Data usage</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="sum_fdn">Manage Fixed Dialing Numbers</string>
    <string name="voice_privacy">Voice Privacy</string>
    <string name="voice_privacy_summary">Enable enhanced privacy mode</string>
    <string name="tty_mode_option_title">TTY Mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="auto_retry_mode_title">Auto Retry</string>
    <string name="auto_retry_mode_summary">Enable Auto Retry mode</string>
    <string name="enter_pin2_text">PIN2</string>
    <string name="voicemail_settings_number_label">Voicemail number</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF Tones</string>
    <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
    <string name="voicemail_settings">Voicemail settings</string>
    <string name="voicemail_provider">Voicemail service</string>
    <string name="other_settings">Other call settings</string>
    <string name="lable_call_barring">Call barring</string>
    <string name="lable_all_outgoing">All outgoing calls</string>
    <string name="lable_all_outgoing_international">International outgoing calls</string>
    <string name="lable_all_out_except">International outgoing calls except to home PLMN</string>
    <string name="lable_all_incoming">All incoming calls</string>
    <string name="lable_incoming_calls_except">Incoming calls while roaming</string>
    <string name="deactivate_all">Cancel all</string>
    <string name="change_password">Change barring password</string>
    <string name="call_barring_sum">Voice call barring settings</string>
    <string name="lable_disable">Disabled</string>
    <string name="voice_mail">Voice mail</string>
    <string name="sum_voice_mail">Voice mail service and number</string>
    <string name="respond_via_sms_setting_title">Quick Responses</string>
    <string name="respond_via_sms_setting_summary" />
    <string name="ip_call_setting_category_title">IP Call Setting</string>
    <string name="ip_call_settings">IP Call</string>
    <string name="ip_call_on_title">IP Call On</string>
    <string name="ip_call_prefix_input">Input IP call prefix here</string>
    <string name="ip_call_self_location_title">Location of your sim card</string>
    <string name="ip_call_self_location_default_summary">Location should be set</string>
    <string name="ip_call_auto_switch_title">Using IP call automatically</string>
    <string name="ip_call_white_list_title">"The numbers don't use IP call"</string>
    <string name="ip_call_white_list_summary">"The set numbers won't use IP call"</string>
    <string name="switch_silence_settings">Flip Mute</string>
    <string name="switch_silence_indicator">Enable Flip Mute</string>
    <string name="half_view_enable">Enable Half InCall Screen</string>
    <string name="vibrate_enable">Vibrate on pickup</string>
    <string name="autorecord_setting_category_title">Record settings</string>
    <string name="autorecord_settings">Record</string>
    <string name="autorecord_settings_switch_title">Record for specified numbers</string>
    <string name="autorecord_white_list_title">Auto record numbers</string>
    <string name="autorecord_white_list_summary">Auto record number setting</string>
    <string name="voicemail_notification_vibrate_when_title">Vibrate</string>
    <string name="voicemail_notification_vibarte_when_dialog_title">Vibrate</string>
    <string name="voicemail_notification_vibrate_when_default">never</string>
    <string name="auto_reject_title">Block incoming calls</string>
    <string name="auto_reject_title_voice">Voice calls</string>
    <string name="auto_reject_title_video">Video calls</string>
    <string name="auto_reject_title_sip">Internet calls</string>
    <string name="auto_reject_sum_voice">Set to block all voice incoming calls directly</string>
    <string name="auto_reject_sum_video">Set to block all video incoming calls directly</string>
    <string name="auto_reject_sum_sip">Set to block all Internet incoming calls directly</string>
    <string name="autorecord_location">saved to sdcard\\PhoneRecord“</string>
    <string name="dialog_network_mode_title">Service</string>
    <string name="dialog_network_priority_title">Priority</string>
    <string name="voice_call_settings">Voice call settings</string>
    <string name="choose_card">Choose Card</string>
    <string name="dial_default_card">Default sim card in dialing</string>
    <string name="no_default_card">No default sim card</string>
    <string name="broadcast_call_by_tts">Annouce incoming call</string>
    <string name="broadcast_callinfo_by_tts">Annouce caller info</string>
    <string name="broadcast_by_tts">Annouce by tts</string>
    <string name="answer">Answer</string>
    <string name="auto_redial_title">Auto Redial</string>
    <string name="auto_redial_setting_title">Auto Redial Setting</string>
</resources>