<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/call_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <PreferenceCategory android:title="@string/ip_call_setting_category_title" android:key="ip_call_setting_category">
        <PreferenceScreen android:persistent="false" android:title="@string/ip_call_settings" android:key="ip_call_setting_entry_key">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.CallFeaturesSetting$IpCallSetting" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/autorecord_setting_category_title" android:key="autorecord_setting_category">
        <PreferenceScreen android:persistent="false" android:title="@string/autorecord_settings" android:key="autorecord_setting_entry_key">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.CallFeaturesSetting$AutoRecordSetting" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/auto_redial_setting_title" android:key="autoredial_setting_category">
        <PreferenceScreen android:persistent="false" android:title="@string/auto_redial_title" android:key="autoredial_setting_entry_key">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.CallFeaturesSetting$AutoReDialSetting" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:persistent="false" android:title="@string/answer" android:key="broadcast_by_tts_key">
        <SwitchPreference android:persistent="false" android:title="@string/broadcast_call_by_tts" android:key="broadcast_call_by_tts" android:summary="@string/broadcast_callinfo_by_tts" />
        <SwitchPreference android:persistent="false" android:title="@string/switch_silence_indicator" android:key="button_flipmute_enable" />
        <SwitchPreference android:persistent="false" android:title="@string/half_view_enable" android:key="button_half_view_enable" android:summary="@string/half_view_enable_summary" />
        <SwitchPreference android:persistent="false" android:title="@string/vibrate_enable" android:key="button_vibrate_enable" />
        <PreferenceScreen android:persistent="false" android:title="@string/respond_via_sms_setting_title" android:key="button_respond_via_sms_key" android:summary="@string/respond_via_sms_setting_summary">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.RespondViaSmsManager$Settings" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:persistent="false" android:title="@string/other_settings" android:key="button_misc_category_key" />
    <PreferenceScreen android:persistent="false" android:title="@string/fdn" android:key="button_fdn_key" android:summary="@string/sum_fdn">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.FdnSetting" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/voicemail" android:key="button_voicemail_category_key">
        <ListPreference android:persistent="true" android:title="@string/voicemail_provider" android:key="button_voicemail_provider_key" android:summary="@string/sum_voicemail_choose_provider" android:defaultValue="" />
        <PreferenceScreen android:persistent="false" android:title="@string/voicemail_settings" android:key="button_voicemail_setting_key">
            <com.android.phone.EditPhoneNumberPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/voicemail_settings_number_label" android:key="button_voicemail_key" android:dialogTitle="@string/voicemail" phone:confirmMode="confirm" />
        </PreferenceScreen>
        <ListPreference android:persistent="true" android:entries="@array/voicemail_notification_vibrate_when_entries" android:title="@string/voicemail_notification_vibrate_when_title" android:key="button_voicemail_notification_vibrate_when_key" android:defaultValue="@string/voicemail_notification_vibrate_when_default" android:dialogTitle="@string/voicemail_notification_vibarte_when_dialog_title" android:entryValues="@array/voicemail_notification_vibrate_when_values" />
    </PreferenceScreen>
    <CheckBoxPreference android:persistent="false" android:title="@string/auto_retry_mode_title" android:key="button_auto_retry_key" android:summary="@string/auto_retry_mode_summary" />
    <ListPreference android:persistent="false" android:entries="@array/tty_mode_entries" android:title="@string/tty_mode_option_title" android:key="button_tty_mode_key" android:summary="@string/tty_mode_option_summary" android:entryValues="@array/tty_mode_values" />
    <CheckBoxPreference android:persistent="true" android:title="@string/hac_mode_title" android:key="button_hac_key" android:summary="@string/hac_mode_summary" />
    <ListPreference android:entries="@array/dtmf_tone_entries" android:title="@string/dtmf_tones_title" android:key="button_dtmf_settings" android:summary="@string/dtmf_tones_summary" android:entryValues="@array/dtmf_tone_values" />
    <PreferenceScreen android:persistent="false" android:title="@string/labelGSMMore" android:key="button_gsm_more_expand_key" android:summary="@string/sum_gsm_call_settings">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.GsmUmtsCallOptions" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/labelCDMAMore" android:key="button_cdma_more_expand_key" android:summary="@string/sum_cdma_call_settings">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.CdmaCallOptions" />
    </PreferenceScreen>
</PreferenceScreen>