<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/autorecord_setting_category_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference android:persistent="true" android:title="@string/autorecord_settings" android:key="button_auto_record_enable" android:summary="@string/autorecord_location" />
    <SwitchPreference android:persistent="true" android:title="@string/autorecord_settings_switch_title" android:key="auto_record_for_white_enable" android:dependency="button_auto_record_enable" android:defaultValue="true" />
    <PreferenceScreen android:title="@string/autorecord_white_list_title" android:key="auto_record_white_list" android:summary="@string/autorecord_white_list_summary" android:dependency="auto_record_for_white_enable">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.AutoRecordListActivity" />
    </PreferenceScreen>
</PreferenceScreen>